# lib

./: .eslintrc.js  .pre-commit-config.yaml  environment.yml  jest.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.eslint.json
.github/workflows/: check-package.yml  release-package.yml  run-pre-commit.yml
src/: index.ts  sentimentAnalyzer.ts  versionUtil.ts
src/__tests__/: index.test.ts  semverRegex.ts  sentimentAnalyzer.test.ts  versionUtil.test.ts
