[tool.poetry]
name = "lib"
version = "0.1.0"
description = "A version-aware library"
authors = ["Reuben Gardos Reid <5456207+ReubenJ@users.noreply.github.com>", "Yuchuan Fu", "Mehul Bhuradia"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.264"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
